--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,35 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  max-width: 100%;
+  max-height: 100%;
   padding: 2rem;
+}
+
+#ice-hockey-svg {
+  padding: 1.1rem;
+  max-height: inherit;
+  max-width: inherit;
+}
+
+.navbar{
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  border-bottom: 1px solid #e2e2e2;
+  height: 45px;
+  align-items: center;
+  justify-content: center;
+}
+
+ h1 {
+  color: black;
+}
+
+.shotmap {
+  border: 1px solid #e2e2e2;
+  color: black;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  margin: 2rem;
 }
