--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ time, mark, audio, video {
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #fafbfe;
+  background-color: #1D283A;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -35,4 +35,3 @@ time, mark, audio, video {
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
